# AlphaLens

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  pyrightconfig.json  run_gemini.py  sonar-project.properties
apps/alphalens-django/: .env.example  .gitignore  README.md  manage.py  pyproject.toml
apps/alphalens-django/auth_cf/: apps.py  authentication.py  conf.py  jwt_verifier.py  middleware.py  openapi.py
apps/alphalens-django/auth_cf/tests/: conftest.py  test_authentication.py  test_jwt_verifier.py
apps/alphalens-django/briefs/: apps.py  migration_guard.py  models.py
apps/alphalens-django/briefs/api/: day_validation.py  filters.py  pagination.py  serializers.py  urls.py  views.py
apps/alphalens-django/briefs/ingest/: coerce.py  parquet.py
apps/alphalens-django/briefs/migrations/: 0001_initial.py  0002_brief_peer_cohort_level.py  0003_remove_brief_brief_full_md.py  0004_remove_brief_brief_disaster_stop_pct_and_more.py  0005_brief_brief_template_facts_brief_brief_template_id.py  0006_alter_brief_brief_template_id.py  0007_rename_gemini_confidence_llm_confidence.py  0008_brief_gate_verdict_json.py  0009_brief_buffett_data_coverage_and_more.py  0010_brief_buffett_management_candor_and_more.py  0011_brief_expert_assessments.py  0012_remove_brief_buffett_data_coverage_and_more.py  0013_brief_insider_signal_version.py  0014_brief_selection_score.py  0015_brief_market_state_brief_market_state_atr_pct_and_more.py
apps/alphalens-django/briefs/tests/: conftest.py  test_api.py  test_coerce.py  test_conftest_isolation.py  test_golden_api.py  test_ingest.py  test_migrate_skew.py  test_migration_guard.py  test_models.py  test_no_market_state_ordering.py  test_openapi_parity.py  test_schema_parity.py
apps/alphalens-django/config/: asgi.py  urls.py  wsgi.py
apps/alphalens-django/config/settings/: base.py  dev.py  prod.py
apps/alphalens-django/config/tests/: test_prod_secret_key_guard.py
apps/alphalens-django/core/: views.py
apps/alphalens-django/core/tests/: test_auth_trampoline.py
apps/alphalens-django/docs/: migration-log.md
apps/alphalens-django/docs/openapi-parity/: README.md  django.json  legacy.json  parity-report.md
apps/alphalens-django/edge/: apps.py  models.py
apps/alphalens-django/edge/api/: base_rate.py  chart.py  excess_telemetry.py  serializers.py  summary.py  urls.py  views.py
apps/alphalens-django/edge/ingest/: parquet.py
apps/alphalens-django/edge/migrations/: 0001_initial.py  0002_ladderoutcome_theme.py  0003_ladderoutcome_chart_payload_json.py  0004_ladderoutcome_ladder_config_version.py  0005_ladderoutcome_grid_realized_r_json.py  0006_ladderoutcome_realized_r_full_fill.py  0007_ladderoutcome_scorer_config_version.py  0008_ladderoutcome_breakeven_realized_r_json.py  0009_ladderoutcome_outcome_benchmark_version_and_more.py  0010_ladderoutcome_captured_tp_count_and_more.py
apps/alphalens-django/feedback/: apps.py  serializers.py  urls.py  views.py
apps/alphalens-django/market/: apps.py  calendar.py  urls.py  views.py
apps/alphalens-django/scripts/: openapi_parity.py
apps/alphalens-feedback/: README.md  pyproject.toml
apps/alphalens-feedback/alphalens_feedback/: __init__.py  migrate.py  regime.py  store.py
apps/alphalens-pipeline/: README.md  pyproject.toml
apps/alphalens-pipeline/alphalens_cli/: main.py
apps/alphalens-pipeline/alphalens_pipeline/: __init__.py
apps/alphalens-research/: README.md  cosmic-ray.toml  pyproject.toml
apps/alphalens-research/alphalens_research/: __init__.py
apps/alphalens-research/scripts/: aggregate_pc_retrospective_verdict.py  aggregate_v10_phases.py  aggregate_v9d_retrospective_verdict.py  analyze_rejections.py  audit_v4_memory.py  av_earnings_daily_backfill.py  backfill_breakeven_whatif.py  backfill_grouped_daily_history.py  backfill_ivolatility_pre_2018.py  build_ff48_index.py  build_form4_cik_universe.py  build_ivol_inventory.py  build_optionable_universe.py  build_pit_universe.py  build_sic_index.py  build_str_factor.py  compact_form4_parquet.py  diagnose_entry_grid.py  diagnose_exit_geometry.py  diagnose_nofill.py  diagnose_selection.py  discover_lane_experiment.py  edgar_companyfacts_backfill.py  edgar_fundamentals_validation_gate.py  experiment_constrained_contrarian.py  experiment_constrained_momentum.py  experiment_distress_credit_v1.py  experiment_ev_fcff_yield.py  experiment_event_drift_v3.py  experiment_event_drift_v4.py  experiment_idiosyncratic_momentum.py  experiment_insider_form4_opportunistic.py  experiment_insider_pc_compound.py  experiment_longshort_mom_lowvol.py  experiment_momentum_lowvol_combo.py  experiment_pc_retrospective.py  experiment_pead_pss_v2.py  experiment_quality_momentum_combo.py  experiment_regime_overlay.py  experiment_tri_factor_edgar.py  (+35 more)
apps/alphalens-research/tests/: test_alpaca_client.py  test_alphavantage_client.py  test_alt_data_av_earnings_client.py  test_alt_data_features.py  test_alt_data_form4_filter.py  test_alt_data_form4_records.py  test_alt_data_iwm_refresher.py  test_alt_data_pit_universe.py  test_alt_data_plan_10b5_1.py  test_alt_data_russell_universe.py  test_alt_data_sec_edgar_client.py  test_alt_data_shares_outstanding.py  test_alt_data_ticker_cik_map.py  test_alt_data_ticker_cik_refresher.py  test_alt_data_yfinance_cache.py  test_analyze_rejections.py  test_annual_aggregator.py  test_audit_cli.py  test_backfill_grouped_daily_history.py  test_backtest_engine_long_short.py  test_backtest_engine_stride.py  test_backtest_ff5_umd.py  test_backtest_llm_scorers.py  test_backtest_q4.py  test_benchmark_excess.py  test_bounds_inference.py  test_breakeven_backfill.py  test_broker_cli.py  test_buffett_cli.py  test_buffett_comparison.py  test_buffett_exec_comp.py  test_buffett_qual_enrichment.py  test_buffett_qualitative.py  test_buffett_quality_score.py  test_buffett_quant_enrichment.py  test_buffett_scuttlebutt.py  test_buffett_tenk_sections.py  test_build_ff48_index.py  test_build_sic_index.py  test_candidates.py  (+269 more)
(+3202 files in other folders)
