[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alphalens"
version = "0.1.0"
description = "Stock analysis pipeline: event detection + screening + multi-agent LLM analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "tradingagents",
    "quiverquant",
]

[project.scripts]
alphalens = "alphalens_cli.main:app"

[tool.setuptools.packages.find]
include = ["alphalens*", "alphalens_cli*"]

[tool.uv.sources]
tradingagents = { path = "./TradingAgents", editable = true }
