[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "alphalens"
version = "0.1.0"
description = "Stock analysis pipeline: event detection + screening + multi-agent LLM analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "langchain-google-genai>=4.2.2",
    "typer>=0.25.1",
    "yfinance>=0.2.63",
    "stockstats>=0.6.5",
    "python-dotenv>=1.2.2",
    "quiverquant",
    "pyarrow>=24.0.0",  # explicit: pandas parquet I/O (FRED cache, history snapshots)
    "scikit-learn>=1.8.0",
    "lightgbm>=4.6.0",
    "ivolatility>=1.9.3",
    "phase-robust-backtesting @ git+https://github.com/kamilpajak/phase-robust-backtesting.git@v0.2.3",
    "feedparser>=6.0.11",
    "google-genai>=0.8.0",
    "json-repair>=0.59.10",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "requests>=2.32.0",
]

[project.scripts]
alphalens = "alphalens_cli.main:app"

[tool.setuptools.packages.find]
include = ["alphalens*", "alphalens_cli*"]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.12",
    "coverage>=7.13.5",
    "pre-commit>=3.7",
    "bandit>=1.9.4",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".venv",
    "build",
    "dist",
    "*.egg-info",
    "logs",
    "reports",
    ".alphalens",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "PIE", # misc
    "RUF", # ruff-specific
    "SIM", # simplify
    "PL",  # pylint subset
    "N",   # pep8-naming
]
ignore = [
    "E501",   # line-too-long (formatter handles it)
    "PLR2004",  # magic numbers — quant code uses many literals (lookback windows, thresholds)
    "PLR0913",  # too many args — research code often has wide signatures
    "PLR0915",  # too many statements — backtest functions are linear sequences
    "PLR0912",  # too many branches — verdict logic
    "N803",   # arg should be lowercase (pandas idioms: X, y)
    "N806",   # variable should be lowercase
    "B008",   # function call in default arg — typer.Option uses this
    "SIM108", # ternary refactor — sometimes hurts readability
    "PLC0415", # imports inside functions/methods — project pattern (lazy imports in tests + CLI)
    "RUF001",  # ambiguous unicode in strings — Polish docstrings/comments
    "RUF002",  # ambiguous unicode in docstrings — Polish-language docstrings
    "RUF003",  # ambiguous unicode in comments — Polish-language comments
    "PLC2401", # non-ASCII variable names — research math notation (α_q, ρ_t, β_smb) is project policy per CLAUDE.md
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR0915",  # tests can be long
    "B011",     # asserts in tests OK
    "B017",     # generic Exception in assertRaises is OK in test scaffolding
    "N801",     # SEC rule class names (TestPlan10b5_1Exclusion, TestJegadeesh11_1)
    "N802",     # SEC Form 4 transaction codes (test_..._code_P_, _S_, _A_) preserve case for clarity
    "F841",     # unused vars w fixture defs are OK
    "RUF012",   # mutable class defaults in stub fixtures are OK
    "B035",     # static-key dict comprehensions in test fixtures are intentional
    "SIM115",   # tempfile.NamedTemporaryFile + addCleanup is the established fixture pattern
    "SIM117",   # nested with-statements in tests highlight scope structure
    "PLW1510",  # subprocess.run in tests asserts on returncode explicitly; check= is the test's job
]
"alphalens/watchdog/lock.py" = [
    "N818",     # WorkerLockBusy is a state signal, not a fatal error — keep without Error suffix
]
"alphalens/archive/**" = [
    "PLW0603",  # closed-layer code retained per ADR 0005; not refactoring closed modules
    "PLR0911",  # closed strategies have legitimate guard-return chains; not refactoring
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.coverage.run]
source = ["alphalens", "alphalens_cli"]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mutmut]
# Transient — ad-hoc mutation testing of form4 backfill modules. Not part
# of CI; remove when no longer needed.
#
# Known limitation: mutmut 3.x uses multiprocessing.Pool, which segfaults
# on macOS + Python 3.13 with native libs (EXC_BAD_ACCESS). Workaround:
# downgrade to mutmut 2.x (`uv pip install "mutmut<3"`) which spawns
# subprocesses sequentially. Run with explicit unittest runner:
#
#   uv pip install "mutmut<3"
#   .venv/bin/mutmut run \
#     --paths-to-mutate "scripts/split_cik_list.py,alphalens/data/alt_data/sec_edgar_client.py" \
#     --runner ".venv/bin/python -m unittest tests.test_split_cik_list tests.test_sec_edgar_client" \
#     --tests-dir tests/
#
# Last run (2026-05-06): 91 killed / 84 survived / 1 timeout / 1 suspicious
# = 51% kill rate. Survivors are mostly low-value: error message strings,
# main() CLI plumbing, module-level URL/REPO_ROOT constants, __init__
# defaults. Targeted gaps closed: _load_cik_list parsing, _evict_to_capacity
# boundary.
#
# To mutate pyarrow-touching modules (form4_bulk_backfill,
# run_form4_backfill, compact_form4_parquet), run on Linux VPS — fork-safe
# there.
paths_to_mutate = [
    "scripts/split_cik_list.py",
    "alphalens/data/alt_data/sec_edgar_client.py",
]
also_copy = [
    "alphalens/",
    "scripts/",
]
tests_dir = [
    "tests/test_split_cik_list.py",
    "tests/test_sec_edgar_client.py",
]
