[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "alphalens-feedback"
version = "0.1.0"
description = "Shared, dependency-free feedback primitives (VIX regime + dead-table teardown) consumed by BOTH the pipeline and the Django API."
readme = "README.md"
requires-python = ">=3.13"
# INTENTIONALLY zero third-party dependencies — regime.py + migrate.py are
# pure stdlib (sqlite3 / datetime / json). This is what lets the slim Django
# image import the regime helper without pulling the heavy pipeline dependency
# tree (yfinance / pandera / scipy).
# Adding a third-party dep here re-bloats the Django image — don't.
dependencies = []

[tool.setuptools.packages.find]
include = ["alphalens_feedback*"]

[tool.coverage.run]
source = ["alphalens_feedback"]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
